<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.More.HelpActivity">

  <View
      android:id="@+id/view8"
      android:layout_width="377dp"
      android:layout_height="1dp"
      android:layout_marginStart="17dp"
      android:layout_marginTop="15dp"
      android:layout_marginEnd="17dp"
      android:layout_marginBottom="16dp"
      android:background="#FFBD35"
      app:layout_constraintBottom_toTopOf="@+id/textView12"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView10" />

  <View
      android:id="@+id/view11"
      android:layout_width="377dp"
      android:layout_height="1dp"
      android:layout_marginStart="17dp"
      android:layout_marginTop="28dp"
      android:layout_marginEnd="17dp"
      android:background="#FFBD35"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView7" />

  <View
      android:id="@+id/view9"
      android:layout_width="377dp"
      android:layout_height="1dp"
      android:layout_marginStart="17dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="17dp"
      android:layout_marginBottom="15dp"
      android:background="#FFBD35"
      app:layout_constraintBottom_toTopOf="@+id/textView16"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView13" />

  <View
      android:id="@+id/view10"
      android:layout_width="377dp"
      android:layout_height="1dp"
      android:layout_marginStart="17dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="17dp"
      android:layout_marginBottom="128dp"
      android:background="#FFBD35"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView15" />

  <ImageView
      android:id="@+id/imageViewHelp"
      android:layout_width="49dp"
      android:layout_height="39dp"
      android:layout_marginStart="346dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_baseline_chevron_right_24" />

  <TextView
      android:id="@+id/textView10"
      android:layout_width="383dp"
      android:layout_height="95dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:text="@string/help1"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView11" />

  <TextView
      android:id="@+id/textView11"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="50dp"
      android:text="@string/what_are_cozymeal_working_hours"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/view11" />

  <TextView
      android:id="@+id/textView13"
      android:layout_width="385dp"
      android:layout_height="133dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:text="@string/help2"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView12" />

  <TextView
      android:id="@+id/textView15"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:text="@string/help3_2"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView16" />

  <TextView
      android:id="@+id/textView12"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:text="@string/help1_1"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/view8" />

  <TextView
      android:id="@+id/textView16"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="50dp"
      android:text="@string/help3_1"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView13" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="179dp"
      android:layout_height="39dp"
      android:layout_marginStart="116dp"
      android:layout_marginTop="74dp"
      android:layout_marginEnd="116dp"
      android:gravity="center"
      android:text="@string/help_and_support"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>